--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -4329,3 +4329,12 @@ nourldate = {2019-06-20},
   howpublished         = "ATL-PHYS-INT-2012-058",
   note = "{\tt https://cds.cern.ch/record/1462582}",
   }
+
+
+@book{calorimetry_book,
+author    = "Wigmans, Richard",
+title     = "Modern Particle Physics",
+publisher = "Oxford University Press",
+year      = "2000",
+address   = "Oxford, UK"
+}
