--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -129,9 +129,9 @@ For my Mother, Father, and Brother
 \mainmatter
 %-------------------------------------------------------------------------------
 
-\chapter{Introduction}
-\label{sec:intro}
-\input{thesisintro.tex}
+%\chapter{Introduction}
+%\label{sec:intro}
+%\input{thesisintro.tex}
 
 \chapter{Introduction}
 \label{sec:theory}
@@ -158,10 +158,10 @@ For my Mother, Father, and Brother
 %\input{qualification.tex}
 %\clearpage
 %
-%\chapter{Measurement of Angular Correlations Between Tracks And Jets}
-%\label{sec:mainanalysis}
-%\input{mainAnalysis.tex}
-%\clearpage
+\chapter{Measurement of Angular Correlations Between Tracks And Jets}
+\label{sec:mainanalysis}
+\input{mainAnalysis.tex}
+\clearpage
 
 %\appendix
 %\chapter{HI JER Uncertainty}
